--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,10 @@ body {
   border-radius: 5px;
 }
 
+.lastResults {
+ font-size: smaller;
+}
+
 .calculator-display{
   justify-content: center;
   font-size: 3.5rem;
